2/6 A futók listája alá -> átlagiram (Pace)

--- a/src/main/resources/templates/runners.html
+++ b/src/main/resources/templates/runners.html
@@ -28,6 +28,7 @@
         </tr>
         </tbody>
     </table>
+    <p> Futók átlagirama:<span th:text="${averagePace}"></span></p>
 </div>
 </body>
 </html>
