2/9 A cipőtípus a localhost-on megjelenik.

--- a/src/main/resources/templates/runner.html
+++ b/src/main/resources/templates/runner.html
@@ -24,6 +24,10 @@
       <td th:text="${averageLaptime}"></td>
     </tr>
     <tr>
+      <th>ShoeName:</th>
+      <td th:text="${runner.shoeName.shoeNameBrand}"></td>
+    </tr>
+    <tr>
       <td colspan="2">
         <table class="table">
           <thead>
